--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body{
 
 #logo{
     position: absolute;
-    top: 50%;
+
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%);
 }
 
